--- a/Style.css
+++ b/Style.css
@@ -1,105 +1,131 @@
 body {
-  font-family: sans-serif;
+  font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
-}
-
-header {
-  background-color: #000;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
-}
-
-nav {
-  background-color: #fff;
-  margin: 0;
-  padding: 20px;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-a {
-  color: #000;
-  text-decoration: none;
-}
-
-main {
-  margin: 0;
-  padding: 20px;
-}
-
-section {
-  margin-bottom: 20px;
 }
 
 h1 {
   font-size: 2em;
-  margin-bottom: 10px;
+  margin-top: 0;
+  font-family: 'Raleway', sans-serif;
 }
 
 h2 {
   font-size: 1.5em;
-  margin-bottom: 10px;
+  margin-top: 0.5em;
+  font-family: 'Raleway', sans-serif;
 }
 
 p {
-  margin-bottom: 10px;
+  margin-bottom: 1em;
+  font-family: 'Poppins', sans-serif;
 }
 
-footer {
-  background-color: #000;
-  color: #fff;
+a {
+  text-decoration: none;
+  color: #000088;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.header {
+  background-color: #000088;
+  color: #ffffff;
   padding: 20px;
-  text-align: center;
 }
 
-ul {
+.nav {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-li {
-  display: inline-block;
+.nav li {
+  float: left;
   margin-right: 20px;
 }
 
-a {
-  color: #fff;
-  text-decoration: none;
+.nav a {
+  color: #ffffff;
+  font-family: 'Raleway', sans-serif;
 }
 
-.feedback-form {
-  width: 500px;
-  margin: 0 auto;
+.main {
+  background-color: #ffffff;
+  padding: 20px;
 }
 
-.feedback-form input {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
+.footer {
+  background-color: #000088;
+  color: #ffffff;
+  padding: 20px;
 }
 
-.feedback-form textarea {
-  width: 100%;
-  height: 100px;
-  padding: 10px;
-  border: 1px solid #ccc;
+.header h1 {
+  color: #ffffff;
+  font-size: 3em;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
 }
 
-.feedback-form input[type="submit"] {
-  background-color: #000;
-  color: #fff;
-  padding: 10px;
-  border: 0;
+.header h2 {
+  color: #ffffff;
+  font-size: 1.5em;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
 }
+
+.main .container {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.main .container p {
+  font-size: 1.2em;
+  line-height: 1.5em;
+}
+
+.main .container .image {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+.main .container .button {
+  background-color: #000088;
+  color: #ffffff;
+  font-size: 1em;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.main .container .button:hover {
+  background-color: #0000cc;
+}
+
+.footer .container {
+  background-color: #000088;
+  color: #ffffff;
+  padding: 20px;
+  text-align: center;
+}
+
+.footer .container p {
+  font-size: 1em;
+}
+
